syntax = "proto3";

// [START java_declaration]
// option java_multiple_files = true;
option java_package = "com.java.flink.stream.proto";
option java_outer_classname = "SimpleMessageProtos";
// [END java_declaration]

message SimpleMessageJavaTypes {
  int64 id = 1;
  string string_value = 2;
  int32 int32_value = 3;
  int64 int64_value = 4;
  double double_value = 5;
  float float_value = 6;
  bool bool_value = 7;
  bytes bytes_value = 8;
}

message SimpleMessage {
  int64 id = 1;
  string string_value = 2;
  int32 int32_value = 3;
  uint32 uint32_value = 4;
  sint32 sint32_value = 5;
  fixed32 fixed32_value = 6;
  sfixed32 sfixed32_value = 7;
  int64 int64_value = 8;
  uint64 uint64_value = 9;
  sint64 sint64_value = 10;
  fixed64 fixed64_value = 11;
  sfixed64 sfixed64_value = 12;
  double double_value = 13;
  float float_value = 14;
  bool bool_value = 15;
  bytes bytes_value = 16;
}